--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -45,7 +45,7 @@
 								</a>
 							</li>
 							<li class="nav-item active">
-								<a class="nav-link" href="#">Actualités<span class="sr-only">(current)</span>
+								<a class="nav-link" href="{{path('actuality')}}">Actualités<span class="sr-only">(current)</span>
 								</a>
 							</li>
 							<li class="nav-item active">
