chore: Update table class to table-responsive in cart/index.html.twig and contact/index.html.twig

--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -9,7 +9,7 @@
 	{% if cart|length > 0 %}
 		<h1>Mon panier</h1>
 		Retrouvez l'ensemble des produits
-		<table class="table mt-3">
+		<table class="table-responsive mt-3">
 			<thead>
 				<tr>
 					<th scope="col">Produit</th>
