--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -83,79 +83,76 @@
 							</ol>
 							<div class="carousel-inner">
 								<div class="carousel-item active">
-									<img class="bd-placeholder-img" src="assets\img\pexels-julia-larson-6456208.jpg" alt="Description de l'image" style="width:100%; height:auto;">
-									<rect width="100%" height="100%" fill="#5D7962"/>
-								</svg>
-								<div class="container">
-									<div class="carousel-caption text-left">
-										<h1>APA Santé</h1>
-										<p>Bienvenue sur le site dédié à l'activité physique adaptée, conçu avec passion par une enseignante dévouée à votre bien-être.Je suis
-											<B>Adeline CANTEAU</B>, une professionnelle passionnée par la promotion d'un mode de vie sain et équilibré à travers l'exercice physique adapté.</p>
-										<p>
-											<a class="btn btn-lg btn-primary" href="#" role="button" style="background-color: #000000; border-color: #5D7962; color: white; text-decoration: none;">Inscrivez-vous à la newsletter</a>
-										</p>
-									</p>
+									<img class="img-fluid" src="assets/img/pexels-julia-larson-6456208.jpg" alt="Description de l'image">
+									<div class="container">
+										<div class="carousel-caption text-left">
+											<h1>APA Santé</h1>
+											<p>Bienvenue sur le site dédié à l'activité physique adaptée, conçu avec passion par une enseignante dévouée à votre bien-être. Je suis
+												<b>Adeline CANTEAU</b>, une professionnelle passionnée par la promotion d'un mode de vie sain et équilibré à travers l'exercice physique adapté.</p>
+											<p>
+												<a class="btn btn-lg btn-primary" href="#" role="button" style="text-decoration: none; color: white; background-color: black; border-color: black;">Inscrivez-vous à la newsletter</a>
+											</p>
+										</div>
+									</div>
+								</div>
+								<div class="carousel-item">
+									<img class="img-fluid" src="assets/img/pexels-wellness-gallery-catalyst-foundation-12086688.jpg" alt="Description de l'image">
+									<div class="container">
+										<div class="carousel-caption text-left" style="color: black;">
+											<h1>APA Santé</h1>
+											<p>Que vous soyez à la recherche d'un programme d'exercices sur mesure, de conseils pratiques ou simplement d'une source d'inspiration pour vous motiver, vous trouverez ici une ressource complète dédiée à votre bien-être.</p>
+											<p>
+												<a class="btn btn-lg btn-primary" href="#" role="button" style="text-decoration: none; color: white; background-color: black; border-color: black;">Inscrivez-vous à la newsletter</a>
+											</p>
+										</div>
+									</div>
+								</div>
+								<div class="carousel-item">
+									<img class="img-fluid" src="assets/img/pexels-yan-krukau-6815702.jpg" alt="Description de l'image">
+									<div class="container">
+										<div class="carousel-caption text-left">
+											<h1>APA Santé</h1>
+											<p>N'hésitez pas à me contacter pour des questions spécifiques ou pour discuter de la manière dont je peux vous accompagner personnellement dans votre parcours vers une vie plus saine.</p>
+											<p>
+												<a class="btn btn-lg btn-primary" href="#" role="button" style="text-decoration: none; color: white; background-color: black; border-color: black;">Inscrivez-vous à la newsletter</a>
+											</p>
+										</div>
+									</div>
 								</div>
 							</div>
+							<a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+								<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+								<span class="sr-only">Precedent</span>
+							</a>
+							<a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+								<span class="carousel-control-next-icon" aria-hidden="true"></span>
+								<span class="sr-only">Suivant</span>
+							</a>
 						</div>
-						<div class="carousel-item">
-							<img class="bd-placeholder-img" src="assets\img\pexels-wellness-gallery-catalyst-foundation-12086688.jpg" alt="Description de l'image" style="width:100%; height:auto;">
-							<rect width="100%" height="100%" fill="#5D7962"/>
-							<div class="container">
-								<div class="carousel-caption text-left" style="color: black;">
-									<h1>APA Santé</h1>
-									<p>Que vous soyez à la recherche d'un programme d'exercices sur
-																				mesure, de conseils pratiques ou simplement d'une source d'inspiration pour vous motiver, vous trouverez ici une ressource complète dédiée à votre bien-être.</p>
-									<p>
-										<a class="btn btn-lg btn-primary" href="#" role="button" style="background-color: #000000; border-color: #5D7962; color: white; text-decoration: none;">Inscrivez-vous à la newsletter</a>
-									</p>
-								</p>
-							</div>
+
+					{% endif %}
+					<div class="container marketing {% if block('carousel') is not defined %}mt-5{% endif %}"> {% block content %}{% endblock %}
 						</div>
-					</div>
-					<div class="carousel-item">
-						<img class="bd-placeholder-img" src="assets\img\pexels-yan-krukau-6815702.jpg" alt="Description de l'image" style="width:100%; height:auto;">
-							<rect width="100%" height="100%" fill="#5D7962"/>
-						</svg>
-						<div class="container">
-							<div class="carousel-caption text-left">
-								<h1>APA Santé</h1>
-								<p>N'hésitez pas à me contacter pour des questions spécifiques ou pour discuter de la manière dont je
-																														peux vous accompagner personnellement dans votre parcours vers une vie plus saine.</p>
-								<p>
-									<a class="btn btn-lg btn-primary" href="#" role="button" style="background-color: #000000; border-color: #5D7962; color: white; text-decoration: none;">Inscrivez-vous à la newsletter</a>
-								</p>
-							</div>
-						</div>
-					</div>
-				</div>
-				<a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="sr-only">Precedent</span>
-				</a>
-				<a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="sr-only">Suivant</span>
-				</a>
-			</div>
-		{% endif %}
-		<div class="container marketing {% if block('carousel') is not defined %}mt-5{% endif %}"> {% block content %}{% endblock %}
-			</div>
-			<!-- /.container -->
-			<!-- FOOTER -->
-			<footer class="footer-custom">
-				<p style="color: #fff;">&copy; APA Santé
-					<br>
-					<small>
-						<a href="#" style="color: #fff; text-decoration: none;">Back to top</a>
-						<br>
-						&middot;
-						<a href="#" style="color: #fff; text-decoration: none;">Privacy</a>
-						&middot;
-						<a href="#" style="color: #fff; text-decoration: none;">Terms</a>
-					</small>
-				</p>
-			</footer>
+						<!-- /.container -->
+						<!-- FOOTER -->
+						<footer class="footer-custom">
+							<p style="color: #fff;">&copy; APA Santé
+								<br>
+								<small>
+									<a href="#" style="color: #fff; text-decoration: none;">Back to top</a>
+									<br>
+									&middot;
+									<a href="#" style="color: #fff; text-decoration: none;">Privacy</a>
+									&middot;
+									<a href="#" style="color: #fff; text-decoration: none;">Terms</a>
+								</small>
+							</p>
+						</footer>
+					</html>
+				</body>
+			</body>
 		</html>
-	</body>
-</html></main><script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script><script src="{{ asset('assets/js/bootstrap.bundle.js') }}"></script></body></body></html>
+	</main>
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+	<script src="{{ asset('assets/js/bootstrap.bundle.js') }}"></script>
+</body></body></html>
