--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -5,7 +5,7 @@
 
 {% block content %}
 	<div class="map">
-		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d44185.702688285106!2d-0.9672111500000001!3d46.1983903!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48014abeaeaec79f%3A0x160926a34fd811e1!2s17540%20V%C3%A9rines!5e0!3m2!1sfr!2sfr!4v1714388531639!5m2!1sfr!2sfr" width="1100" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d44185.702688285106!2d-0.9672111500000001!3d46.1983903!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x48014abeaeaec79f%3A0x160926a34fd811e1!2s17540%20V%C3%A9rines!5e0!3m2!1sfr!2sfr!4v1714388531639!5m2!1sfr!2sfr" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 	</div>
 
 	<div class="container">
